syntax = "proto3";
package transfer;
option go_package = "github.com/weplanx/transfer/api";
import "google/protobuf/empty.proto";

service API {
  rpc Logger(google.protobuf.Empty) returns (LoggerReply) {}
  rpc CreateLogger(CreateLoggerRequest) returns (google.protobuf.Empty) {}
  rpc DeleteLogger(DeleteLoggerRequest) returns (google.protobuf.Empty) {}
  rpc Publish(PublishRequest) returns (google.protobuf.Empty) {}
}

message Logger {
  string key = 1;
  string topic = 2;
  string description = 3;
}

message LoggerReply {
  repeated Logger data = 1;
}

message CreateLoggerRequest {
  string topic = 1;
  string description = 2;
}

message DeleteLoggerRequest {
  string key = 1;
}

message PublishRequest {
  string topic = 1;
  bytes payload = 2;
}


